--- a/assets/convert-calvados3.ipynb
+++ b/assets/convert-calvados3.ipynb
@@ -30,7 +30,6 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "import matplotlib\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -50,14 +49,16 @@
     "    if not os.path.isfile(csvfile):\n",
     "        urllib.request.urlretrieve(\n",
     "            \"https://raw.githubusercontent.com/KULL-Centre/CALVADOS/refs/heads/main/examples/single_MDP/input/residues_CALVADOS3.csv\",\n",
-    "            csvfile)\n",
-    "    df = pd.read_csv(csvfile,\n",
-    "                     usecols=[\"three\", \"MW\", \"sigmas\", \"sigmas\", \"q\", \"lambdas\"])\n",
-    "    df.columns = ['name', 'mass', 'hydrophobicity', 'sigma', 'charge']\n",
+    "            csvfile,\n",
+    "        )\n",
+    "    df = pd.read_csv(\n",
+    "        csvfile, usecols=[\"three\", \"MW\", \"sigmas\", \"sigmas\", \"q\", \"lambdas\"]\n",
+    "    )\n",
+    "    df.columns = [\"name\", \"mass\", \"hydrophobicity\", \"sigma\", \"charge\"]\n",
     "    df[\"hydrophobicity\"] = df[\"hydrophobicity\"].map(\"!Lambda {:.5}\".format)\n",
-    "    df[\"ε\"] = 0.8368   # kJ/mol\n",
+    "    df[\"ε\"] = 0.8368  # kJ/mol\n",
     "    df[\"sigma\"] *= 10  # nm -> angstrom\n",
-    "    df.to_json('calvados3.json', orient=\"records\", force_ascii=False)\n",
+    "    df.to_json(\"calvados3.json\", orient=\"records\", force_ascii=False)\n",
     "    return df"
    ]
   },
@@ -87,26 +88,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "σ = 6.0      # angstrom\n",
-    "ε = 0.8368 # kJ/mol\n",
+    "σ = 6.0  # angstrom\n",
+    "ε = 0.8368  # kJ/mol\n",
     "λ = 0.5\n",
-    "rc = 3 * σ    # angstrom\n",
+    "rc = 3 * σ  # angstrom\n",
+    "\n",
     "\n",
     "def lj(r):\n",
-    "    return 4 * ε * ( (σ/r)**12 - (σ/r)**6 )\n",
+    "    return 4 * ε * ((σ / r) ** 12 - (σ / r) ** 6)\n",
+    "\n",
     "\n",
     "def ah(r):\n",
     "    if r > rc:\n",
     "        return 0.0\n",
-    "    if r <= σ * 2**(1/6):\n",
-    "        return lj(r) - λ * lj(rc) + ε * (1-λ)\n",
+    "    if r <= σ * 2 ** (1 / 6):\n",
+    "        return lj(r) - λ * lj(rc) + ε * (1 - λ)\n",
     "    return λ * (lj(r) - lj(rc))\n",
     "\n",
-    "r = np.linspace(0.9*σ, rc, 50)\n",
+    "\n",
+    "r = np.linspace(0.9 * σ, rc, 50)\n",
     "f = np.vectorize(ah)\n",
     "\n",
-    "plt.plot(r/σ, lj(r)/ε, label='Lennard-Jones')\n",
-    "plt.plot(r/σ, f(r)/ε, label='Ashbaugh-Hatch')\n",
+    "plt.plot(r / σ, lj(r) / ε, label=\"Lennard-Jones\")\n",
+    "plt.plot(r / σ, f(r) / ε, label=\"Ashbaugh-Hatch\")\n",
     "\n",
     "plt.xlabel(\"r/σ\")\n",
     "plt.ylabel(\"u(r)/ε\")\n",
